--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>oct-webgl</title>
 </head>
 <body>
+<div>oct-webgl</div>
 <div id="root"></div>
 </body>
 </html>
