--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <title>oct-webgl</title>
 </head>
 <body>
-<div>oct-webgl</div>
-<div id="root"></div>
+<div>
+    <canvas  id="canvas" width="800px" height="600px"></canvas>
+</div>
 </body>
 </html>
